[gd_scene load_steps=4 format=3 uid="uid://d8kxk7umkaai"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_3ggkl"]
[ext_resource type="FontFile" uid="uid://cp6h71yc5w0ex" path="res://Sounds/kenvector_future.ttf" id="1_ird3n"]
[ext_resource type="PackedScene" uid="uid://dp7jp0dvjc63b" path="res://scenes/settings.tscn" id="3_fbsrb"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ggkl")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="RESUME" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ird3n")
theme_override_font_sizes/font_size = 50
text = "RESUME"

[node name="SETTINGS" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ird3n")
theme_override_font_sizes/font_size = 50
text = "SETTINGS"

[node name="QUIT" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ird3n")
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="settings" parent="." instance=ExtResource("3_fbsrb")]
visible = false
layout_mode = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/RESUME" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SETTINGS" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
[connection signal="back" from="settings" to="." method="_on_settings_back"]
